test/classes/errors/nilability-return-yield/yield-unmanaged.good
yield-unmanaged.chpl:3: In iterator 'I':
yield-unmanaged.chpl:3: error: cannot initialize yield value of type 'unmanaged C' from a 'unmanaged C?'
